--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -5,14 +5,14 @@
   padding-right: 15px;
   @media screen and (min-width: 480px) {
     width: 480px;
-  } /*
+  } 
   @media screen and (min-width: 768px) {
     width: 720px;
   }
   @media screen and (min-width: 1200px) {
     width: 1200px;
   }
-
+/*
   @include mobale {
     max-width: 448px;
   }
